@@ -1155,7 +1155,7 @@
 						<visible>VideoPlayer.Content(LiveTV)</visible>
 					</control>
 				</control>
-				<control type="label">
+				<!--<control type="label">
 					<description>Player Times</description>
 					<posx>1352</posx>
 					<posy>833</posy>
@@ -1165,9 +1165,67 @@
 					<font>Font-Onscreen-Time</font>
 					<angle>0</angle>
 					<textcolor>33ffffff</textcolor>
+				</control>-->
+				<control type="label">
+					<description>Player Times</description>
+					<posx>1318</posx>
+					<posy>757</posy>
+					<width>700</width>
+					<label>•</label>
+					<align>left</align>
+					<font>Font-Onscreen-Time</font>
+					<angle>0</angle>
+					<textcolor>33ffffff</textcolor>
+					<visible>IntegerGreaterThan(VideoPlayer.Time(hh),0)</visible>
+				</control>
+				<control type="label">
+					<description>Player Times</description>
+					<posx>1278</posx>
+					<posy>757</posy>
+					<width>700</width>
+					<label>•</label>
+					<align>left</align>
+					<font>Font-Onscreen-Time</font>
+					<angle>0</angle>
+					<textcolor>33ffffff</textcolor>
+					<visible>IntegerGreaterThan(VideoPlayer.Time(hh),1)</visible>
+				</control>
+				<control type="label">
+					<description>Player Times</description>
+					<posx>1238</posx>
+					<posy>757</posy>
+					<width>700</width>
+					<label>•</label>
+					<align>left</align>
+					<font>Font-Onscreen-Time</font>
+					<angle>0</angle>
+					<textcolor>33ffffff</textcolor>
+					<visible>IntegerGreaterThan(VideoPlayer.Time(hh),2)</visible>
+				</control>
+				<control type="label">
+					<description>Player Times</description>
+					<posx>1365</posx>
+					<posy>805</posy>
+					<width>1500</width>
+					<label>$INFO[VideoPlayer.Time(mm)]</label>
+					<align>left</align>
+					<font>Font-MusicVis-Time</font>
+					<angle>0</angle>
+					<textcolor>33ffffff</textcolor>
+				</control>
+				<control type="label">
+					<description>Player Times</description>
+					<posx>1640</posx>
+					<posy>805</posy>
+					<width>1500</width>
+					<label>$INFO[VideoPlayer.Time(ss)]</label>
+					<align>left</align>
+					<font>Font-MusicVis-Time</font>
+					<angle>0</angle>
+					<textcolor>33ffffff</textcolor>
 				</control>
 				<control type="grouplist">
-					<posx>1365</posx>
+					<posx>1380</posx>
 					<posy>885</posy>
 					<width>500</width>
 					<height>100</height>
