@@ -7,6 +7,7 @@ Consolidation of OSD info views
 Music OSD uses artistslideshow additional info (bio, similar, discog)
 Fixed Onscreen music-osd icon size
 Fixed Offset music-osd icon spacing
+Onscreen video updates
 
 [B]0.4.4[/B]
 Updates to on-screen music info view
